# robot-whisperer

./: .gitignore  README.md  pyproject.toml
DATA/: README.md  dev.ipynb  formatted-queries_2024-Jan-30_23-29-10.json  generated-queries.json  synthetic-data-dev.ipynb
DATA/dataset_2024-Jan-30_23-29-10/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
DATA/dataset_2024-Jan-30_23-29-10/train/: data-00000-of-00001.arrow  state.json
LLM/: README.md  __init__.py  action_models.py  fine-tune_llm.ipynb  fine-tune_llm_2.ipynb  function_caller.py  llm-dev.ipynb  prompts.json  prompts.py  test_function_caller.py
LLM/tests/: functions_choice.jsonl
controllers/: run_mock_server.py
controllers/mock/: __init__.py  models.py  server.py
functions/: abb.py  run_client.py
