[tool.poetry]
name = "robot-whisperer"
version = "0.0.1"
description = "Control robots with words and speech."
authors = ["milistu <studen.m98@gmail.com>, botka1998 <botka1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.2"
transformers = "^4.36.2"
autoawq = "^0.1.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
