[tool.poetry]
name = "robot-whisperer"
version = "0.0.1"
description = "Control robots with words and speech."
authors = ["milistu <studen.m98@gmail.com>, botka1998 <botka1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.2"
transformers = "^4.36.2"
optimum = "^1.16.2"
openai = "^1.10.0"
python-dotenv = "^1.0.1"
jsonformer = {git = "https://github.com/botka1998/jsonformer.git"}
pydantic = "^2.5.3"
tiktoken = "^0.5.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.extras]
cuda = ["auto-gptq"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
